[package]
name = "rust-uno"
version = "0.1.0"
authors = ["Jeyko Caicedo <jakeactually@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-actors = "3.0.0"
actix-session = "0.4.1"
serde = "1.0.125"
actix = "0.10.0"
rand = "0.8.3"
