[package]
name = "rust-uno"
version = "0.1.0"
authors = ["Jeyko Caicedo <jakeactually@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
